test/cli/test-validating-policy/policy-with-crd/clusterresources.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: clusterresources
spec:
  crds:
    - crds/widget-crd.yaml
  resources:
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: default
